# majec

./: .gitignore  LICENSE  README.md  majec.yml  pyproject.toml
conda-recipe/: meta.yaml
docs/: algorithm_details.md  bam_preparation.md  output_files.md  post_quantification.md  usage_guide.md
images/: fun.text
src/majec/: database.py  pipeline.py  preprocess.py
src/majec/analysis/: deseq2.py  visualization.py
src/majec/tools/: fragment_lengths.py  normalization.py  thresholds.py
src/majec/utils/: cache.py  confidence_utils.py  group_confidence.py  junctions.py  pipeline_utils.py
tests/: test_pipeline.py
